syntax = "proto3";

package bnet;

import "messages/master/master.proto";

option java_package = "net.bestia.bnet.proto";
option java_outer_classname = "MasterVisualComponentSMSGProto";

message MasterVisualComponentSMSG {
  fixed64 entity_id = 1;
  Color skin_color = 3;
  Color hair_color = 4;
  Face face = 5;
  BodyType body = 6;
  Hairstyle hair = 7;
}
